--- a/src/pages/pizza.astro
+++ b/src/pages/pizza.astro
@@ -9,6 +9,6 @@ import Layout from '../layouts/Layout.astro';
     <span class="columns-2 flex md:shrink-0 justify-items-center items-center justify-evenly">
         <h2 class="text-mech-200 pb-9 content-center font-bold font-sans sm:px-9 bg-clip-text text-4xl sm:text-6xl">Panago Pizza</h2>
     </span>
-    <p class="text-mech-500 pb-4">EngSoc has negotiated a discount with Panogo Pizza to get 15% off + $4.50 shipping fee when you deliver to St. George Campus! You have to order from Panogo Pizza Bathurst (at 787 Bathurst Street, Toronto). Call them at (647)-784-8089 and tell them you’re from UofT Engineering Society, and then show them your T-Card. <br/>
+<p class="text-mech-500 pb-4">EngSoc has negotiated a discount with Panago Pizza to get 15% off + $4.50 shipping fee when you deliver to St. George Campus! You have to order from Panago Pizza Bathurst (at 787 Bathurst Street, Toronto). Call them at (647)-784-8089 and tell them you’re from UofT Engineering Society, and then show them your T-Card. <br/> <br/> NOTE: EngSoc is renegotiating for this year, please wait a while <br/>
     </p>
-    <h2 class="text-mech-500 py-8 text-center content-center font-bold font-sans bg-clip-text text-4xl sm:text-6xl">Enjoy! 💙</h2>
+    <h2 class="text-mech-500 py-8 text-chttps://forms.gle/vMKgf22fBGsfmDod8ehttps://forms.gle/vMKgf22fBGsfmDod8nter content-center font-bold font-sans bg-clip-text text-4xl sm:text-6xl">Enjoy! 💙</h2>
