--- a/src/pages/resources.astro
+++ b/src/pages/resources.astro
@@ -77,73 +77,81 @@ If this thought likely doesn’t make sense, and is likely not to occur, <span c
       <Card
               href="https://studentlife.utoronto.ca/department/health-wellness/"
         title="Health & Wellness Centre: 416-978-8030, info.hwc@utoronto.ca"
-        body="The official UofT Health & Wellness Centre provides services for both physical and mental health, and hosts workshops that help students manage various aspects of the stress of university. It offers a lot, including certain immunizations, sexual health consultations, and nutrition counseling."
-      />
-      <CardAlternate
-              href="https://studentlife.utoronto.ca/service/myssp/"
-              title="U of T My Student Support Program (My SSP): 1-844-451-9700"
-              body="Outside of North America, call 001-416-380-6578. MySSP is a chat system that provide students with confidential, free, 24-hour support for any school, health, or general life concern."
+        body="Physical and mental health services, stress workshops, certain immunizations, sexual health consultations, and nutrition counseling."
       />
       <Card
+              href="https://studentlife.utoronto.ca/service/myssp/"
+              title="U of T My Student Support Program (My SSP): 1-844-451-9700 (Outside of North America, call 001-416-380-6578)"
+              body=" Confidential, free, 24-hour chat support for any school, health, or general life concern."
+      />
+    </ul>
+    <ul role="list" class="link-card-grid grid pt-4 gap-8">
+      <CardAlternate
               href="https://good2talk.ca/ontario/"
               title="Good2Talk Student Helpline: 1-866-925-5454"
-              body="Good2Talk is a chat system that provide students with confidential, free, 24-hour counselling for mental health and addiction."
+              body="Confidential, free, 24-hour counselling chat system for mental health and addiction."
       />
       <CardAlternate
               href="https://gersteincentre.org/"
               title="Gerstein Crisis Centre: 416-929-5200"
-              body="A 24-hour community based centre, specifically for those who are in crisis due to mental health issues or substance use."
+              body="A 24-hour community based centre for those in crisis due to mental health issues or substance use."
       />
     </ul>
     <h3 class="text-mech-500 pt-9 pb-4 content-center font-bold font-sans bg-clip-text text-2xl sm:text-3xl">Off-Campus Resources</h3>
     <ul role="list" class="link-card-grid grid gap-8">
       <Card
+              href="http://www.camh.ca/"
+              title="The Centre for Addiction and Mental Health (CAMH): 416-535-8501, press 2"
+              body="Critical mental health assistance for various mental disorders and substance use."
+      />
+      <Card
+        href="https://kidshelpphone.ca/"
+              title="Kids Help Phone: 1-800-668-6868"
+              body="National service that offers anonymous, free counselling, 24/7 through text, on the phone, or on their website."
+      />
+    </ul>
+    <ul role="list" class="link-card-grid pt-4 grid gap-8">
+      <CardAlternate
               href="https://togetherall.com/en-ca/"
               title="TogetherAll"
-              body="An anonymous, online peer-to-peer support community, Togetherall focuses on more common and more insidious mental health issues such as anxiety and depression. The platform offers assistance for individuals at risk, but is designed for those who have a mild to moderate need for support."
+              body="An anonymous, online peer-to-peer support community for common mental health issues."
       />
       <CardAlternate
         href="https://www.dcogt.com/home-support"
               title="Distress Centres of Greater Toronto: 416-408-HELP (4357)"
-              body="The DCoGT offer chat lines for people experiencing various difficulties, from general mental health concerns, to multilingual support and programs for those who are survivors of suicide or homicide."
+              body="Chat lines for people experiencing various difficulties."
+      />
+    </ul>
+    <ul role="list" class="link-card-grid grid pt-4 gap-8">
+      <Card
+              href="https://www.awhl.org/home"
+              title="Assaulted Women's Helpline: 416-863-0511"
+              body="24-hour telephone crisis line to all women who have experienced abuse, providing counselling, emotional support, information and referralsl."
       />
       <Card
-              href="http://www.camh.ca/"
-              title="The Centre for Addiction and Mental Health (CAMH): 416-535-8501, press 2"
-              body="CAMH is located on Spadina, minutes away from campus: the centre offers many services, and specifically critical mental health assistance, for various mental disorders and substance use."
+        href="https://www.torontocentralhealthline.ca/displayservice.aspx?id=133949"
+              title="Central Intake Shelter (Housing): 416-338-4766"
+              body="This is the centralized system for city-managed temporary shelters, where homeless individuals can go to determine their next steps."
       />
+    </ul>
+    <ul role="list" class="link-card-grid grid pt-4 gap-8">
       <CardAlternate
-        href="https://kidshelpphone.ca/"
-              title="Kids Help Phone: 1-800-668-6868"
-              body="Kids Help Phone is a national service that offers anonymous, free counselling, 24/7 through text, on the phone, or on their website."
-      />
-      <Card
               href="https://www.connexontario.ca/"
               title="ConnexOntario: 1-866-531-2600"
-              body="ConnexOntario provides free and confidential 24/7 health services information for people experiencing problems with alcohol and drugs, mental illness and/or gambling. This service is accessible by email, by phone, or online."
+              body="Free and confidential 24/7 health services information for people experiencing problems with alcohol and drugs, mental illness and/or gambling."
       />
       <CardAlternate
         href="https://www.crisisservicescanada.ca/en/"
               title="Crisis Services Canada (Canada Suicide Prevention): 1-833-456-4566"
-              body="CSS is a national network of various crisis helplines. They specialize in supporting those who are affected by suicide, whether it is internal thoughts, concern for someone else, or loss due to suicide."
-      />
-      <Card
-              href="https://www.awhl.org/home"
-              title="Assaulted Women's Helpline: 416-863-0511"
-              body="The AWHL offers a 24-hour telephone crisis line to all women who have experienced abuse, providing counselling, emotional support, information and referrals. Over 200 languages are supported, and the system is completely confidential."
-      />
-      <CardAlternate
-        href="https://www.torontocentralhealthline.ca/displayservice.aspx?id=133949"
-              title="Central Intake Shelter (Housing): 416-338-4766"
-              body="This is the centralized system for city-managed temporary shelters, where homeless individuals can go to determine their next steps."
+              body="National network of various crisis helplines (especially )."
       />
     </ul>
     <h2 class="text-mech-500 pt-12 pb-4 content-center font-bold font-sans bg-clip-text text-4xl sm:text-6xl">Mentorship</h2>
 <p class="text-mech-500 leading-10">Mech Club provides mentorship for first year Mech and TrackOne students! Sign up to be a mentor or mentee below!
     </p>
     <ul role="list" class="link-card-grid py-4 grid gap-8">
-      <Card
-              href="/shop/"
+      <CardDark
+              href="/mentorship/"
               title="Mentorship (WIP)"
               body="Become a mentee here"
       />
