--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,22 +15,22 @@ import CardAlternate from '../components/CardAlternate.astro';
       <Card
               href="/about/"
               title="About Us"
-              body="Learn about how Mech Club works!"
+              body="Learn about how Mech Club works."
       />
       <Card
-              href="/resources/"
-              title="Resources"
-              body="Explore the resources we provide, including academic support, mental health tips, and lockers!"
+              href="/academics/"
+              title="Academic Resources"
+              body="Explore the academic resources we provide."
       />
       <Card
-              href="/shop/"
-              title="Shop Lockers & Merch"
-              body="Learn more about & rent our lockers, and look at our very pretty merch :3"
+              href="/mental-health/"
+              title="Mental Health Resources"
+              body="Get access to mental health tips and resources."
       />
       <Card
         href="/mentorship/"
               title="Mentorship"
-              body="Mech Club provides mentorship for first year Mech and TrackOne students! Sign up to be a mentor or mentee!"
+              body="Mech Club provides mentorship for first year Mech and TrackOne students. Sign up to be a mentor or mentee."
       />
     </ul>
     <br />
@@ -38,12 +38,12 @@ import CardAlternate from '../components/CardAlternate.astro';
       <CardAlternate
               href="https://q.utoronto.ca/courses/178298"
               title="Quercus Notifications"
-              body="Get notifications from Mech Club on Quercus!"
+              body="Get notifications from Mech Club on Quercus."
       />
       <CardAlternate
-              href="https://gather.town/app/iHJnJSO6TKJFjYew/CR"
-              title="Online Common Room"
-              body="Check out our online common room!"
+              href="/shop/"
+              title="Shop Lockers & Merch"
+              body="Learn more about & rent our lockers, and look at our very pretty merch :)"
       />
     </ul>
     <br />
@@ -51,12 +51,12 @@ import CardAlternate from '../components/CardAlternate.astro';
       <Card
               href="https://linktr.ee/mechclub"
               title="LinkTree"
-              body="Use our LinkTree to find forms and events!"
+              body="Use our LinkTree to find forms and events."
       />
       <Card
               href="https://www.instagram.com/mechclub/"
               title="Instagram"
-              body="Be on the know by following us on Insta!"
+              body="Be on the know by following us on Insta."
       />
       <Card
               href="https://www.github.com/MechClub"
@@ -71,9 +71,3 @@ import CardAlternate from '../components/CardAlternate.astro';
     </ul>
   </main>
 </Layout>
-
-<style>
-  .link-card-grid {
-    grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-  }
-</style>
