--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -5,25 +5,16 @@ import { Icon } from 'astro-icon/components'
 <nav class="mt-5 m-2">
   <!-- -->
   <div class="relative flex flex-wrap overflow-auto m-0 py-5 px-7 bg-mech-200 w-full min-h-fit border-4 border-mech-500 rounded-2xl content-center text-center items-stretch sm:justify-between justify-center gap-3">
-    <!-- Left Hand Side up to # -->
+    <!-- Left Hand Side up to # - Address Button -->
     <div class="flex flex-wrap gap-5 justify-left py-3">
       <div class="items-center self-center justify-center flex flex-wrap overflow-auto gap-3">
-        <!-- Mech Club Button -->
-        <div class="flex">
-          <a href="/./" class="float-right items-center self-center" >
-<button type="button" class="float-right items-center self-center rounded-full border-4 border-mech-500 text-mech-100 text-center bg-mech-500 w-52 h-16 font-bold">Mech Club<br/>University of Toronto</button>
-          </a>
-        </div>
-        <!-- Address Button -->
-        <div class="flex">
-          <a href="https://map.utoronto.ca/?id=1809#!m/494466?share" target="_blank" class="float-right items-center self-center" >
-            <button type="button" class="float-right items-center self-center rounded-full border-4 border-mech-500 text-center text-mech-500 bg-mech-300 w-52 h-16 font-bold min-h-fit">170 College St, Toronto<br/>MB2 25C </button>
-          </a>
-        </div>
+        <a href="https://map.utoronto.ca/?id=1809#!m/494466?share" target="_blank" class="float-right items-center self-center" >
+          <button type="button" class="float-right items-center self-center rounded-full border-4 border-mech-500 text-center text-mech-500 bg-mech-300 w-72 h-16 font-bold min-h-fit text-md">170 College St, Toronto, MB2 25C </button>
+        </a>
       </div>
     </div>
     <!-- # -->
-    <!-- Right Hand Side up to # -->
+    <!-- Right Hand Side up to # - Social Media Links -->
     <div class="flex py-3 gap-3">
         <!-- Insta -->
         <div class="flex" >
