--- a/src/layouts/Head.astro
+++ b/src/layouts/Head.astro
@@ -3,13 +3,13 @@ const { title, description } = Astro.props;
 ---
 
 <html lang = en>
-    <head>
-		<meta charset="UTF-8" />
-        <meta name="description" content={description} />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/svg+xml" href="../../src/images/mechclublogo.png" />
-		<meta name="generator" content={Astro.generator} />
-        <title>{title}</title>
-    </head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="description" content={description} />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="../../src/images/mechclublogo.png" />
+    <meta name="generator" content={Astro.generator} />
+    <title>{title}</title>
+  </head>
 </html>
 
