--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,44 +21,48 @@ const {
     </body>
 </html>
 <style is:global>
-	:root {
-        --accent-light: 235 247 255;
-        --accent: 25 104 168;
-        --accent-dark: 1 18 101;
-        --accent-extra: 66 198 235;
-        --accent-extra2: 202 242 202;
-		--accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			rgb(var(--accent-extra)) 30%,
-			white 60%
-		);
-		--full-accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			rgb(var(--accent-dark)) 30%,
-			white 60%
-		);
-	}
-	html {
-		font-family: system-ui, sans-serif;
-        background-color: rgb(var(--accent-light));
-		background-size: 224px;
-	}
-	code {
-		font-family:
-			Menlo,
-			Monaco,
-			Lucida Console,
-			Liberation Mono,
-			DejaVu Sans Mono,
-			Bitstream Vera Sans Mono,
-			Courier New,
-            Cascadia Code,
-			monospace;
-	}
-        @font-face {
-          font-family: 'FontAwesome';
-          src: url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css') format('woff');
-}
+  :root {
+    --accent-light: 235 247 255;
+    --accent: 25 104 168;
+    --accent-dark: 1 18 101;
+    --accent-extra: 66 198 235;
+    --accent-extra2: 202 242 202;
+    --accent-gradient: linear-gradient(
+      45deg,
+      rgb(var(--accent)),
+      rgb(var(--accent-extra)) 30%,
+      white 60%
+    );
+    --full-accent-gradient: linear-gradient(
+      45deg,
+      rgb(var(--accent)),
+      rgb(var(--accent-dark)) 30%,
+      white 60%
+    );
+  }
+  html {
+    font-family: system-ui, sans-serif;
+    background-color: rgb(var(--accent-light));
+    background-size: 224px;
+  }
+  code {
+    font-family:
+      Menlo,
+      Monaco,
+      Lucida Console,
+      Liberation Mono,
+      DejaVu Sans Mono,
+      Bitstream Vera Sans Mono,
+      Courier New,
+      Cascadia Code,
+      monospace;
+  }
+  @font-face {
+    font-family: 'FontAwesome';
+    src: url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css') format('woff');
+  }
+  .link-card-grid {
+    grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
+  }
+
 </style>
