--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,10 +1,34 @@
 ---
 import Layout from '../layouts/Layout.astro';
+import { Image } from 'astro:assets';
+import akshat from '../images/meetyourteam/akshat.png';
+import brandon from '../images/meetyourteam/brandon.png';
+import charlie from '../images/meetyourteam/charlie.png';
+
+
+import dhruv from '../images/meetyourteam/dhruv.png';
+
+import hannah from '../images/meetyourteam/hannah.png';
+
+import keting from '../images/meetyourteam/keting.png';
+
+import ksenya from '../images/meetyourteam/ksenya.png';
+
+import rafiq from '../images/meetyourteam/rafiq.png';
+
+import shiva from '../images/meetyourteam/shiva.png';
+
+import siddhartha from '../images/meetyourteam/siddhartha.png';
+
+import suprisha from '../images/meetyourteam/suprisha.png';
+
+import valentina from '../images/meetyourteam/valentina.png';
+
 ---
 <Layout>
   <main class="m-auto p-4 max-w-full text-xl sm:px-24">
     <span class="columns-2 flex md:shrink-0 justify-items-center items-center justify-evenly">
-        <h1 class="text-mech-500 pt-40 content-center font-bold font-sans px-9 bg-clip-text text-6xl sm:text-8xl">About Mech Club</h1>
+        <h1 class="text-mech-500 pt-40 content-center font-bold font-sans px-9 bg-clip-text text-center text-5xl sm:text-8xl">About Mech Club</h1>
     </span>
     <p class="text-mech-500 pt-9 pb-4 text-justify">Welcome to Mech Club! We are for the students, run by the students, and here for you every step of the way through your undergrad. Find out more about us below!<br/>
     </p>
@@ -28,5 +52,19 @@ import Layout from '../layouts/Layout.astro';
       Please feel free to reach out to us with any questions, concerns, or ideas. We would love to hear from you!<br />
     </p>
     <h2 class="text-mech-500 pt-12 pb-4 content-center font-bold font-sans bg-clip-text text-4xl sm:text-6xl">Meet the Team (WIP)</h2>
+    <ul role="list" class="link-card-grid p-0 grid gap-8">
+        <Image src={siddhartha} class="sm:w-200 sm:h-200 h-200 w-200 self-center" alt="Mech Club logo" loading="eager" width=800 height=800 />
+        <Image src={rafiq} class="sm:w-200 sm:h-200 h-200 w-200 self-center" alt="Mech Club logo" loading="eager" width=800 height=800 />
+        <Image src={valentina} class="sm:w-200 sm:h-200 h-200 w-200 self-center" alt="Mech Club logo" loading="eager" width=800 height=800 />
+        <Image src={shiva} class="sm:w-200 sm:h-200 h-200 w-200 self-center" alt="Mech Club logo" loading="eager" width=800 height=800 />
+        <Image src={ksenya} class="sm:w-200 sm:h-200 h-200 w-200 self-center" alt="Mech Club logo" loading="eager" width=800 height=800 />
+        <Image src={brandon} class="sm:w-200 sm:h-200 h-200 w-200 self-center" alt="Mech Club logo" loading="eager" width=800 height=800 />
+        <Image src={akshat} class="sm:w-200 sm:h-200 h-200 w-200 self-center" alt="Mech Club logo" loading="eager" width=800 height=800 />
+        <Image src={suprisha} class="sm:w-200 sm:h-200 h-200 w-200 self-center" alt="Mech Club logo" loading="eager" width=800 height=800 />
+        <Image src={dhruv} class="sm:w-200 sm:h-200 h-200 w-200 self-center" alt="Mech Club logo" loading="eager" width=800 height=800 />
+        <Image src={hannah} class="sm:w-200 sm:h-200 h-200 w-200 self-center" alt="Mech Club logo" loading="eager" width=800 height=800 />
+        <Image src={charlie} class="sm:w-200 sm:h-200 h-200 w-200 self-center" alt="Mech Club logo" loading="eager" width=800 height=800 />
+        <Image src={keting} class="sm:w-200 sm:h-200 h-200 w-200 self-center" alt="Mech Club logo" loading="eager" width=800 height=800 />
+    </ul>
   </main>
 </Layout>
