--- a/src/pages/mental-health.astro
+++ b/src/pages/mental-health.astro
@@ -2,57 +2,18 @@
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 import CardAlternate from '../components/CardAlternate.astro';
-import CardDark from '../components/CardDark.astro';
+import Resources from '../components/Resources.astro'
 ---
 <Layout>
   <main class="m-auto p-4 max-w-full text-xl sm:px-24">
     <span class="columns-2 flex md:shrink-0 justify-items-center items-center justify-evenly">
-        <h1 class="text-mech-500 pt-40 content-center font-bold font-sans sm:px-9 bg-clip-text text-6xl sm:text-8xl">Resources!</h1>
+        <h1 class="text-mech-500 pt-40 content-center font-bold font-sans sm:px-9 bg-clip-text text-5xl text-center sm:text-8xl">Mental Health Resources!</h1>
     </span>
-    <p class="text-mech-500 pt-9 pb-4">Scroll below to find academic, mental health, & school resources.<br/>
-    </p>
-    <ul role="list" class="link-card-grid grid gap-8">
-      <Card
-              href="https://prod.virtualagent.utoronto.ca/"
-              title="Find Campus Resources"
-              body="Use Navi, UofT's resource navigator, to help you find academic, financial, & mental health resources on campus!"
-      />
-      <CardAlternate
-              href="/pizza/"
-              title="Pizza Discount"
-              body="If your comfort food is pizza, get a discount on it :3"
-      />
-      <Card
-              href="https://pbs.twimg.com/media/EVqochYXYAQJnHc.jpg"
-              title="Self-Care Bingo"
-              body="Play a Bingo to help take care of yourself 💙"
-      />
-    </ul>
-    <h2 class="text-mech-500 pt-12 pb-4 content-center font-bold font-sans bg-clip-text text-4xl sm:text-6xl">Academic Resources</h2>
-    <p class="text-mech-500 pb-4 leading-10">Every year, Mech Club assembles folders with each year’s core textbooks and old practice materials. These are located in our club Google Drive, and shared around the year group chats at the beginning of each semester. The relevant links are available below. We recommend using old tests for practice before midterms and exams!
-    </p> <!--academic resources-->
-    <ul role="list" class="link-card-grid grid gap-8">
-      <Card
-              href="https://drive.google.com/drive/folders/14paejQPp9wmwzW-UFxtoj9-HEUnRbAJ6?usp=sharing"
-              title="First Year Resources"
-              body=""
-      />
-      <CardAlternate
-              href="https://drive.google.com/drive/folders/1H45Wu4_mZQM6gK-liHj2zzjrvCCkYt5P?usp=sharing"
-              title="Second Year Resources"
-              body=""
-      />
-      <Card
-              href="https://drive.google.com/drive/folders/1VBfI4Naz4q9moXKg2p9__iO_INz5-zpU?usp=sharing"
-              title="Third Year Resources"
-              body=""
-      />
-    </ul>
-    <h2 class="text-mech-500 pt-12 pb-4 content-center font-bold font-sans bg-clip-text text-4xl sm:text-6xl">Mental Health Resources</h2>
+    <Resources/>
+    <h2 class="text-mech-500 pt-12 pb-4 content-center font-bold font-sans bg-clip-text text-4xl sm:text-6xl">Tips to De-stress & Reduce Anxiety 💙</h2>
     <p class="text-mech-500 leading-10">Check in with yourself regularly. Try out our tips below; if you need someone to talk to, please scroll down!
     </p>
-    <h3 class="text-mech-500 pt-6 pb-4 content-center font-bold font-sans bg-clip-text text-2xl sm:text-3xl">Tips to De-stress & Reduce Anxiety 💙</h3>
-<p class="text-mech-500 leading-10"><span class="bg-clip-text text-2xl">Quick Check List</span>
+    <h3 class="text-mech-500 py-6 content-center font-bold font-sans bg-clip-text text-2xl sm:text-3xl">Quick Check List</h3>
       <ol class="list-inside list-decimal py-2">
         <li>Does what I’m hearing in my head create a negative emotion in my mind?</li>
         <li>Why is this thought making me feel a negative emotion?</li>
@@ -61,7 +22,7 @@ import CardDark from '../components/CardDark.astro';
 If this thought likely doesn’t make sense, and is likely not to occur, <span class="font-bold">abandon thought.</span>
       <br/>
       <br/>
-      <span class="bg-clip-text text-2xl">Try the following:</span>
+    <h3 class="text-mech-500 pt-6 pb-4 content-center font-bold font-sans bg-clip-text text-2xl sm:text-3xl">Try the following:</h3>
       <ol class="list-inside list-decimal py-2">
         <li>Listen to your favourite songs</li>
         <li>Talk to loved ones</li>
@@ -72,7 +33,7 @@ If this thought likely doesn’t make sense, and is likely not to occur, <span c
       </ol>
     <span class="font-bold">Remember, a proven way to quickly get rid of stress is to maximize time in a “flow” activity - any activity where you feel completely immersed throughout.</span>
 </p>
-    <h3 class="text-mech-500 pt-6 pb-4 content-center font-bold font-sans bg-clip-text text-2xl sm:text-3xl">On-Campus Resources</h3>
+    <h2 class="text-mech-500 pt-12 pb-8 content-center font-bold font-sans bg-clip-text text-4xl sm:text-6xl">On-Campus Resources</h2>
     <ul role="list" class="link-card-grid grid gap-8">
       <Card
               href="https://studentlife.utoronto.ca/department/health-wellness/"
@@ -97,7 +58,7 @@ If this thought likely doesn’t make sense, and is likely not to occur, <span c
               body="A 24-hour community based centre for those in crisis due to mental health issues or substance use."
       />
     </ul>
-    <h3 class="text-mech-500 pt-9 pb-4 content-center font-bold font-sans bg-clip-text text-2xl sm:text-3xl">Off-Campus Resources</h3>
+    <h2 class="text-mech-500 pt-12 pb-8 content-center font-bold font-sans bg-clip-text text-4xl sm:text-6xl">Off-Campus Resources</h2>
     <ul role="list" class="link-card-grid grid gap-8">
       <Card
               href="http://www.camh.ca/"
@@ -146,32 +107,6 @@ If this thought likely doesn’t make sense, and is likely not to occur, <span c
               body="National network of various crisis helplines (especially )."
       />
     </ul>
-    <h2 class="text-mech-500 pt-12 pb-4 content-center font-bold font-sans bg-clip-text text-4xl sm:text-6xl">Mentorship</h2>
-<p class="text-mech-500 leading-10">Mech Club provides mentorship for first year Mech and TrackOne students! Sign up to be a mentor or mentee below!
-    </p>
-    <ul role="list" class="link-card-grid py-4 grid gap-8">
-      <CardDark
-              href="/mentorship/"
-              title="Mentorship (WIP)"
-              body="Become a mentee here"
-      />
-    </ul>
-    <h2 class="text-mech-500 pt-12 pb-4 content-center font-bold font-sans bg-clip-text text-4xl sm:text-6xl">Lockers</h2>
-<p class="text-mech-500 leading-10">Learn more about the lockers we rent below!
-    </p>
-    <ul role="list" class="link-card-grid py-4 grid gap-8">
-      <CardDark
-              href="/shop/"
-              title="Shop"
-              body="Check out our shop to learn more about our lockers (and see our cool merch collection)"
-      />
-    </ul>
-
   </main>
 </Layout>
 
-<style>
-  .link-card-grid {
-    grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-  }
-</style>
