--- a/src/pages/mentorship.astro
+++ b/src/pages/mentorship.astro
@@ -6,9 +6,9 @@ import CardAlternate from '../components/CardAlternate.astro';
 <Layout title="Mentorship" description="Find info on mentorship & become a mentor/mentee!" >
   <main class="m-auto p-4 max-w-full text-xl sm:px-24">
     <span class="columns-2 flex md:shrink-0 justify-items-center items-center justify-evenly">
-        <h1 class="text-mech-500 pt-40 content-center font-bold font-sans sm:px-9"><span class="bg-clip-text text-6xl sm:text-8xl">Mentorship!</h1>
+        <h1 class="text-mech-500 pt-40 content-center font-bold font-sans sm:px-9"><span class="bg-clip-text text-5xl text-center sm:text-8xl">Mentorship!</h1>
     </span>
-    <h2 class="text-mech-500 pt-12 pb-4 content-center font-bold font-sans bg-clip-text text-4xl sm:text-6xl">Lockers</h2>
+    <h2 class="text-mech-500 pt-12 pb-4 content-center font-bold font-sans bg-clip-text text-4xl sm:text-6xl">Mentorship</h2>
     <p class="text-mech-500 leading-10 pb-4 text-justify">Every year, Mech Club hosts a mentorship program, pairing upper-years with first-years, to ease the transition into university, provide a source of information, and give first-years a chance to meet others outside their year, which can be hard to do otherwise! Click the links below to sign up!
     </p>
     <ul role="list" class="link-card-grid grid gap-8">
@@ -25,9 +25,3 @@ import CardAlternate from '../components/CardAlternate.astro';
     </ul>
   </main>
 </Layout>
-
-<style>
-  .link-card-grid {
-    grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-  }
-</style>
