--- a/src/pages/pizza.astro
+++ b/src/pages/pizza.astro
@@ -4,11 +4,13 @@ import Layout from '../layouts/Layout.astro';
 <Layout title="pizza!!" description="Find out how to get a discount on pizza!" >
   <main class="m-auto p-4 max-w-full text-xl sm:px-24">
     <span class="columns-2 flex md:shrink-0 justify-items-center items-center justify-evenly">
-        <h1 class="text-mech-500 pt-40 content-center font-bold font-sans sm:px-9 bg-clip-text text-6xl sm:text-8xl">Pizza Discount</h1>
+        <h1 class="text-mech-500 pt-40 content-center font-bold font-sans sm:px-9 bg-clip-text text-5xl text-center sm:text-8xl">Pizza Discount</h1>
     </span>
+    <h2 class="py-32 text-mech-500 pb-9 content-center font-bold font-sans sm:px-9 bg-clip-text text-4xl sm:text-6xl">NOTE: EngSoc currently has no pizza discount, and the information below is what we had for previous years.</h2>
     <span class="columns-2 flex md:shrink-0 justify-items-center items-center justify-evenly">
-        <h2 class="text-mech-200 pb-9 content-center font-bold font-sans sm:px-9 bg-clip-text text-4xl sm:text-6xl">Panago Pizza</h2>
+        <h2 class="text-mech-200 py-9 content-center font-bold font-sans sm:px-9 bg-clip-text text-4xl sm:text-6xl">Panago Pizza</h2>
     </span>
-<p class="text-mech-500 pb-4">EngSoc has negotiated a discount with Panago Pizza to get 15% off + $4.50 shipping fee when you deliver to St. George Campus! You have to order from Panago Pizza Bathurst (at 787 Bathurst Street, Toronto). Call them at (647)-784-8089 and tell them you’re from UofT Engineering Society, and then show them your T-Card. <br/> <br/> NOTE: EngSoc is renegotiating for this year, please wait a while <br/>
-    </p>
+<p class="text-mech-500 pb-4">EngSoc has negotiated a discount with Panago Pizza to get 15% off + $4.50 shipping fee when you deliver to St. George Campus! You have to order from Panago Pizza Bathurst (at 787 Bathurst Street, Toronto). Call them at (647)-784-8089 and tell them you’re from UofT Engineering Society, and then show them your T-Card.</p>
     <h2 class="text-mech-500 py-8 text-chttps://forms.gle/vMKgf22fBGsfmDod8ehttps://forms.gle/vMKgf22fBGsfmDod8nter content-center font-bold font-sans bg-clip-text text-4xl sm:text-6xl">Enjoy! 💙</h2>
+  </main>
+</Layout>
