--- a/src/pages/shop.astro
+++ b/src/pages/shop.astro
@@ -5,7 +5,7 @@ import CardDark from '../components/CardDark.astro';
 <Layout title="Shop | Lockers + Merch" description="Find info on lockers/merch & rent some Mech Club lockers!" >
   <main class="m-auto p-4 max-w-full text-xl sm:px-24">
     <span class="columns-2 flex md:shrink-0 justify-items-center items-center justify-evenly">
-        <h1 class="text-mech-500 pt-40 content-center font-bold font-sans sm:px-9"><span class="bg-clip-text text-6xl sm:text-8xl">Shop!</h1>
+        <h1 class="text-mech-500 pt-40 content-center font-bold font-sans sm:px-9"><span class="bg-clip-text text-5xl text-center sm:text-8xl">Shop!</h1>
     </span>
     <h2 class="text-mech-500 pt-12 pb-4 content-center font-bold font-sans bg-clip-text text-4xl sm:text-6xl">Lockers</h2>
 <p class="text-mech-500 leading-10 pb-4 text-justify">Mechanical engineering students have access to rent lockers on campus in three different locations! Lockers are assigned on a first-come first-served basis but student preference is taken into consideration. Lockers are sold by the Mechanical Engineering Club for $25 for Mech students and $30 for non-Mech students. We accept applications at any point during the school year and they are currently being rented for the entire 2023/24 year (includes Fall, Winter, and Summer sessions). Students must supply their own locks and are responsible for clearing out their belongings at the end of their rental period.
@@ -21,9 +21,3 @@ import CardDark from '../components/CardDark.astro';
 
   </main>
 </Layout>
-
-<style>
-  .link-card-grid {
-    grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-  }
-</style>
